tests/compile/shader_modules/meshlet_payload.stderr
In file included from meshlet_payload.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:6:
intrinsics_mesh.hpp:105:16: error: static assertion failed due to requirement '0U > 0': MeshletPayload MaxVertices must be > 0
  105 |         static_assert(MaxVertices > 0, "MeshletPayload MaxVertices must be > 0");
      |                       ^~~~~~~~~~~~~~~
meshlet_payload.cpp:41:53: note: in instantiation of template class 'rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 0, 126>' requested here
   41 |         MeshletPayload <MeshPrimitive::eTriangles, 0, 126> bad;
      |                                                            ^
In file included from meshlet_payload.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:6:
intrinsics_mesh.hpp:106:16: error: static assertion failed due to requirement '0U > 0': MeshletPayload MaxPrimitives must be > 0
  106 |         static_assert(MaxPrimitives > 0, "MeshletPayload MaxPrimitives must be > 0");
      |                       ^~~~~~~~~~~~~~~~~
meshlet_payload.cpp:46:52: note: in instantiation of template class 'rcgp::MeshletPayload<rcgp::MeshPrimitive::eTriangles, 64, 0>' requested here
   46 |         MeshletPayload <MeshPrimitive::eTriangles, 64, 0> bad;
      |                                                           ^
In file included from meshlet_payload.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:11:
return_handler.hpp:23:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)1 == rcgp::ShaderStage::eMesh'
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eVertex, rcgp::MeshPrimitive::eTriangles, 64U, 126U, void>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:23:18: note: expression evaluates to '1 == 5'
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
return_handler.hpp:23:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)3 == rcgp::ShaderStage::eMesh'
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eCompute, rcgp::MeshPrimitive::eTriangles, 64U, 126U, void>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:23:18: note: expression evaluates to '3 == 5'
   23 |         static_assert(S == ShaderStage::eMesh);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
4 errors generated.
